--- a/gitops/templates/deployment/service.yaml
+++ b/gitops/templates/deployment/service.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: {{ .Values.svcname }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
       app: {{ .Values.svcname }}
@@ -23,7 +23,7 @@ spec:
       - name: {{ .Values.svcname }}
         image: {{ .Values.svcimage }}
         command: ["sh","-c"]
-        args: ["python service.py > /client-resource/service_Info.json"]
+        args: ["python service.py > /client-resource/service_resource.json"]
         volumeMounts:
         - name: {{ .Values.volumename }}
           mountPath: {{ .Values.mountPath }}
