--- a/gitops/templates/deployment/main.yaml
+++ b/gitops/templates/deployment/main.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: {{ .Values.firstpage }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
       app: {{ .Values.firstpage }}
