--- a/Helm-Chart/client-library/version3/client-resource/templates/deployment/node.yaml
+++ b/Helm-Chart/client-library/version3/client-resource/templates/deployment/node.yaml
@@ -23,7 +23,7 @@ spec:
       - name: {{ .Values.nodename }}
         image: {{ .Values.nodeimage }}
         command: ["sh","-c"]
-        args: ["python Node_Info.py > /client-resource/Node_Info.json"]
+        args: ["python Node.py > /client-resource/node_resource.json"]
         volumeMounts:
         - name: {{ .Values.volumename }}
           mountPath: {{ .Values.mountPath }}
