--- a/Helm-Chart/client-library/version3/client-resource/templates/deployment/node.yaml
+++ b/Helm-Chart/client-library/version3/client-resource/templates/deployment/node.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: {{ .Values.nodename }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
       app: {{ .Values.nodename }}
