--- a/Helm-Chart/client-library/version3/client-resource/templates/deployment/pod.yaml
+++ b/Helm-Chart/client-library/version3/client-resource/templates/deployment/pod.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: {{ .Values.podname }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
       app: {{ .Values.podname }}
