--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
-    "ejs": "^3.1.6"
+    "ejs": "^3.1.6",
+    "os": "^0.1.2"
   },
   "devDependencies": {
     "express": "^4.17.1"
