--- a/Helm-Chart/client-library/version3/client-resource/values.yaml
+++ b/Helm-Chart/client-library/version3/client-resource/values.yaml
@@ -9,15 +9,15 @@ volumeclaimName: hanium-2021-pvc
 mountPath: /client-resource
 ## Client Pod Resource
 podname: deployment-pod-resource
-podimage: public.ecr.aws/b2t5b6j7/pod_resource:latest
+podimage: 
 # Client Node Resource
 nodename: deployment-node-resource
-nodeimage: public.ecr.aws/b2t5b6j7/node_resource:latest
+nodeimage: 
 # Client NS Resource
-nsimage: public.ecr.aws/b2t5b6j7/ns_resource:latest
+nsimage: 
 nsname: deployment-ns-resource
 # Client SVC Resource
-svcimage: public.ecr.aws/b2t5b6j7/service_resource:latest
+svcimage: 
 svcname: deployment-service-resource
 # SVC Client 
 frontendname: nginx-test
