--- a/docker/NAMESPACE/Dockerfile
+++ b/docker/NAMESPACE/Dockerfile
@@ -2,7 +2,6 @@ FROM python:3.8-alpine
 MAINTAINER lee2155507@naver.com
 COPY . .
 RUN pip install -r requirements.txt
-VOLUME ["/app-data"]
-CMD ["python","pod_list.py > /app-data/pod_list.txt"]
+CMD ["python","Node_lnfo.py"]
 
 
