--- a/Client_library/NODE/cluster-role.yaml
+++ b/Client_library/NODE/cluster-role.yaml
@@ -1,22 +1,21 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: clientlibrary-node-info
-  #namespace: client-library
+  name: clientlibrary-helm-node
 rules:
 - apiGroups: [""]
   resources: ["nodes"]
-  verbs: ["*"]
+  verbs: ["get","list","watch"]
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: clientlibrary-node-info
+  name: clientlibrary-helm-node
 subjects:
 - kind: ServiceAccount
-  name: default
-  namespace: client-library
+  name: mychart
+  namespace: default
 roleRef:
   kind: ClusterRole
-  name: clientlibrary-node-info
+  name: clientlibrary-helm-node
   apiGroup: rbac.authorization.k8s.io
