--- a/Client_library/NODE/node.yaml
+++ b/Client_library/NODE/node.yaml
@@ -1,9 +1,9 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: cron-ns-info
+  name: cron-node-info
 spec:
-  schedule: "*/9 * * * *"
+  schedule: "*/5 * * * *"
   jobTemplate:
     spec:
       template:
@@ -14,7 +14,7 @@ spec:
           serviceAccountName: mychart
           containers:
           - name: nodeinfo
-            image: 238856124133.dkr.ecr.ap-northeast-1.amazonaws.com/private-ns-resource:latest
-            command: ["python","ns.py"]
+            image: 238856124133.dkr.ecr.ap-northeast-1.amazonaws.com/private-node-resource:latest
+            command: ["python","node.py"]
 
   
