--- a/Client_library/POD/cluster-role.yaml
+++ b/Client_library/POD/cluster-role.yaml
@@ -1,22 +1,22 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: clientlibrary-pods-list
+  name: clientlibrary-helm-pod
   namespace: client-library
 rules:
 - apiGroups: [""]
   resources: ["pods"]
-  verbs: ["*"]
+  verbs: ["get","list","watch"]
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: clientlibrary-pods-list
+  name: clientlibrary-helm-pod
 subjects:
 - kind: ServiceAccount
-  name: default
+  name: mychart
   namespace: client-library
 roleRef:
   kind: ClusterRole
-  name: clientlibrary-pods-list
+  name: clientlibrary-helm-pod
   apiGroup: rbac.authorization.k8s.io
