--- a/Client_library/POD/pod.yaml
+++ b/Client_library/POD/pod.yaml
@@ -1,9 +1,9 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: cron-ns-info
+  name: cron-pod-info
 spec:
-  schedule: "*/9 * * * *"
+  schedule: "*/5 * * * *"
   jobTemplate:
     spec:
       template:
@@ -13,8 +13,8 @@ spec:
           - name: regcred
           serviceAccountName: mychart
           containers:
-          - name: nodeinfo
-            image: 238856124133.dkr.ecr.ap-northeast-1.amazonaws.com/private-ns-resource:latest
-            command: ["python","ns.py"]
+          - name: svcinfo
+            image: 238856124133.dkr.ecr.ap-northeast-1.amazonaws.com/private-pod-resource:latest
+            command: ["python","pod.py"]
 
   
