--- a/Iac/create-cluster.yaml
+++ b/Iac/create-cluster.yaml
@@ -1,24 +1,13 @@
 ---
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
-
 metadata:
-  name: K8S-loki
-  region: ap-northeast-2
-  version: "1.19"
-
-availabilityZones: ["ap-northeast-2a", "ap-northeast-2b", "ap-northeast-2c"]
-
+  name: 
+  region: 
+  version: ""
+availabilityZones: [" "]
 managedNodeGroups:
 - name: node-group
   desiredCapacity: 1
   instanceType: t3.small
-  iam:
-      withAddonPolicies:
-        imageBuilder: true # AWS ECR에 대한 권한 추가
-        albIngress: true  # albIngress에 대한 권한 추가
-        cloudWatch: true # cloudWatch에 대한 권한 추가
-        autoScaler: true # auto scaling에 대한 권한 추가
-cloudWatch:
-  clusterLogging:
-    enableTypes: ["*"]
+  
