--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -4,10 +4,12 @@ FROM node:16.8.0
 
  WORKDIR /web
 
- COPY . /web
+ COPY  package*.json ./
 
  RUN npm install
+ 
+ COPY . .
 
  EXPOSE 3000
 
- CMD ["npm", "start"]
+ CMD ["node", "app.js"]
