--- a/Helm-Chart/client-library/version7/client-resource/templates/ingress.yaml
+++ b/Helm-Chart/client-library/version7/client-resource/templates/ingress.yaml
@@ -7,6 +7,8 @@ metadata:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1
 spec:
   rules:
   - http:
