--- a/Helm-Chart/client-library/version7/client-resource/templates/ingress.yaml
+++ b/Helm-Chart/client-library/version7/client-resource/templates/ingress.yaml
@@ -7,8 +7,11 @@ metadata:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
+    ## SSL Settings
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:238856124133:certificate/c0b8cd0a-3de7-4846-87fb-fee71a0f93d5
+    # SSL Redirect Setting
+    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'   
 spec:
   rules:
   - http:
