--- a/Helm-Chart/client-library/version7/client-resource/values.yaml
+++ b/Helm-Chart/client-library/version7/client-resource/values.yaml
@@ -10,6 +10,10 @@ mountPath: /client-resource
 ## Client Pod Resource
 podname: cr-pod-resource
 podimage: 238856124133.dkr.ecr.ap-northeast-1.amazonaws.com/private-pod-resource:latest
+podlogimage: 238856124133.dkr.ecr.ap-northeast-1.amazonaws.com/private-pod-resource-log-report:latest
+podlogname: cr-pod-resource-logreport
+podmonitorimage: 238856124133.dkr.ecr.ap-northeast-1.amazonaws.com/private-pod-resource-monitoring:latest
+podmonitorname: cr-pod-resource-monitoring
 # Client Node Resource
 nodename: cr-node-resource
 nodeimage: 238856124133.dkr.ecr.ap-northeast-1.amazonaws.com/private-node-resource:latest
@@ -42,6 +46,8 @@ memory: "256Mi"
 cronjobns: cronjob-ns-resource
 cronjobnode: cronjob-node-resource
 cronjobpod: cronjob-pod-resource
+cronjobpodlog: cronjob-pod-resource-log
+cronjobpodmonitor: cronjob-pod-resource-monitor
 cronjobsvc: cronjob-svc-resource
 # serviceaccount name
 saname: mychart
