--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "chart.js": "^3.5.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
+    "node-fetch": "^3.0.0",
     "os": "^0.1.2",
     "sort-json-array": "^0.1.7"
   },
