Modify Helm-chart and Add image-vul,log-report

--- a/Helm-Chart/client-library/version8/client-resource/templates/deployment/logreport.yaml
+++ b/Helm-Chart/client-library/version8/client-resource/templates/deployment/logreport.yaml
@@ -20,8 +20,8 @@ spec:
         persistentVolumeClaim:
           claimName: {{ .Values.volumeclaimName }}
       containers:
-      - name: {{ .Values.frontendname }}
-        image: nginx
+      - name: {{ .Values.logreportname }}
+        image: {{ .Values.logreportimage }}
         volumeMounts:
         - name: {{ .Values.volumename }}
           mountPath: {{ .Values.mountPath }}
