--- a/Helm-Chart/client-library/version8/client-resource/templates/deployment/logreport.yaml
+++ b/Helm-Chart/client-library/version8/client-resource/templates/deployment/logreport.yaml
@@ -22,6 +22,10 @@ spec:
       containers:
       - name: {{ .Values.logreportname }}
         image: {{ .Values.logreportimage }}
+        resources:
+          requests:
+            cpu: {{ .Values.cpu }}
+            memory: {{ .Values.memory }}
         volumeMounts:
         - name: {{ .Values.volumename }}
           mountPath: {{ .Values.mountPath }}
