--- a/Helm-Chart/client-library/version8/client-resource/values.yaml
+++ b/Helm-Chart/client-library/version8/client-resource/values.yaml
@@ -7,7 +7,8 @@ version: 'latest'
 volumename: hanium-2021-pv
 volumeclaimName: hanium-2021-pvc
 mountPath: /client-resource
-## Client Pod Resource
+
+## Main Frontned CronJob Resource
 podname: cr-pod-resource
 podimage: 238856124133.dkr.ecr.ap-northeast-1.amazonaws.com/private-pod-resource-all:latest
 # Client Node Resource
@@ -19,6 +20,10 @@ nsname: cr-ns-resource
 # Client SVC Resource
 svcimage: 238856124133.dkr.ecr.ap-northeast-1.amazonaws.com/private-svc-resource:latest
 svcname: cr-service-resource
+# Log Report CronJob Resource
+logreportjob: log-report
+logerrorimage: 238856124133.dkr.ecr.ap-northeast-1.amazonaws.com/private-cronjob-log-report:latest
+
 # SVC Client 
 frontendname: main-frontend
 frontendimage: 238856124133.dkr.ecr.ap-northeast-1.amazonaws.com/action-main-frontend:latest
@@ -52,6 +57,7 @@ cronjobpodmonitor: cronjob-pod-resource-monitor
 cronjobsvc: cronjob-svc-resource
 # serviceaccount name
 saname: mychart
+sapodiam: pod-iam-test
 # Clusterrole
 clusterrolepod: clientlibrary-helm-pod
 clusterrolesvc: clientlibrary-helm-svc
