--- a/Helm-Chart/client-library/version8/client-resource/templates/service/ingress.yaml
+++ b/Helm-Chart/client-library/version8/client-resource/templates/service/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Values.ingressname }}
   #namespace: {{ .Values.frontendns }}
   annotations:
-   # alb.ingress.kubernetes.io/waf-acl-id: fad72bba-ba71-48cd-9db9-708128507b0c
+    alb.ingress.kubernetes.io/waf-acl-id: ec9dfd7d-5e4b-4960-8876-9999dc728764
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
