--- a/Iac/create-cluster.yaml
+++ b/Iac/create-cluster.yaml
@@ -2,10 +2,10 @@
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 metadata:
-  name: kubeboard
-  region: ap-northeast-1
-  version: "1.20"
-availabilityZones: [" "]
+  name: #cluster-name
+  region: ap-northeast-2 # region-name
+  version: "1.21"
+availabilityZones: [" "] # aws vpc 
 managedNodeGroups:
 - name: node-group
   desiredCapacity: 1
